crates/mega-evm/tests/satin/snapshots/satin__detention__other_accounts_and_storage_are_not_volatile.snap
---
source: crates/mega-evm/tests/satin/detention.rs
expression: "&OutcomeView::new(&run.outcome)"
---
{
  "result": {
    "kind": "success",
    "reason": "Stop",
    "output": "0x",
    "created": null,
    "logs": []
  },
  "gas": {
    "regular": 22149,
    "state": 0,
    "history": 27280,
    "history_bytes": 310,
    "reservoir_remaining": 0,
    "floor": 15000,
    "gas_used": 49429
  },
  "result_gas": {
    "total_gas_spent": 49429,
    "state_gas_spent": 0,
    "refunded": 0,
    "floor_gas": 15000,
    "reservoir_remaining": 0
  },
  "usage": {
    "data_size": 310,
    "write_records": 0
  },
  "limit_stop": null,
  "oracle_reads": [],
  "accounts": {
    "0x0000000000000000000000000000000000bef000": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x0000000000000000000000000000000000d00000": {
      "balance": "0x0",
      "nonce": 1,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x0000000000000000000000000000000000d00001": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xce592824a29c59acafbff577c933674f7b0dd1b16175e8b2d90133cd3dc389e6",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x0000000000000000000000000000000000d00002": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0x47c69fc6677076b111e56b448732b245073ab4942d9bee5ca8c134a3b507d026",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x4200000000000000000000000000000000000019": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x420000000000000000000000000000000000001a": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x420000000000000000000000000000000000001b": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    }
  }
}
